// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-text-like #render clearable should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (2) 1`] = `
<gux-form-field-text-like clearable="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (3) 1`] = `
<gux-form-field-text-like clearable="true">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
            <gux-form-field-input-clear-button></gux-form-field-input-clear-button>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (4) 1`] = `
<gux-form-field-text-like clearable="false">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render clearable should render component as expected (5) 1`] = `
<gux-form-field-text-like clearable="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-disabled gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render error should render component as expected 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-error-i" aria-invalid="true" id="gux-form-field-input-i" name="e-1" slot="input" type="text">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render help should render component as expected 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="e-1" slot="input" type="text">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-text-like indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-text-like indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-disabled gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
        <gux-form-field-label-indicator required="" variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" required="" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="email" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (2) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="password" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render input type attribute should render component as expected (3) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render label-info should render component as expected 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-label-info-beta-i" id="gux-form-field-input-i" name="e-1" slot="input" type="text">
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (2) 1`] = `
<gux-form-field-text-like label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (3) 1`] = `
<gux-form-field-text-like label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render label-position should render component as expected (4) 1`] = `
<gux-form-field-text-like label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (2) 1`] = `
<gux-form-field-text-like loading="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <div role="status">
              <gux-radial-loading context="input"></gux-radial-loading>
            </div>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (3) 1`] = `
<gux-form-field-text-like loading="true">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <div role="status">
              <gux-radial-loading context="input"></gux-radial-loading>
            </div>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (4) 1`] = `
<gux-form-field-text-like loading="false">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render loading should render component as expected (5) 1`] = `
<gux-form-field-text-like loading="">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-disabled gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <div role="status">
              <gux-radial-loading context="input"></gux-radial-loading>
            </div>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input disabled="" id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render prefix should render component as expected 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-has-prefix gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <span id="gux-prefix-i" slot="prefix">
    Prefix
  </span>
  <input aria-describedby="gux-prefix-i" id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render suffix should render component as expected 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-has-suffix gux-input-container">
            <slot name="prefix"></slot>
            <slot name="input"></slot>
            <slot name="suffix"></slot>
          </div>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input aria-describedby="gux-suffix-i" id="gux-form-field-input-i" slot="input" type="text" value="Sample text">
  <span id="gux-suffix-i" slot="suffix">
    Suffix
  </span>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-text-like>
`;
